@@ -6,7 +6,9 @@ Add GauchaZH
 Add VmnMedia.nl Group (opt-in to custom sites)
 Remove Weltkunst.de (fix obsolete)
 Fix The Athletic (Kiwi)
+Fix TheTimes.co.uk (overlay)
 Fix TownNews sites (encrypted)
+Update popup (Google Search Tool)
 
 * v3.1.9.0 (2023-05-21)
 Remove (custom) Substack (fix obsolete)
